header issues and horizontal scroll fix

--- a/project_one.css
+++ b/project_one.css
@@ -15,29 +15,33 @@ body{
 
   background-color: #FFFFFF;
 }
-
+header{
+ 
+}
 nav{
-  width: 95%;
-display: flex;
-flex-direction: row;
-justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
 }
 nav ul {
-  display: flex;
   list-style: none;
-  left: 10rem;
+  display: flex;
+  flex-direction: row;
+  padding-left: 0px;
+  padding-right: 50px;
+
 }
 nav a{
   text-decoration: none;
   margin: 5px;
   padding: 5px;
+  color: #344563;
 }
+
+
 .logo1 {
-  position: relative;
   width: 76px;
   height: 20px;
-  left: 4rem;
-  top: 0rem;
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -46,23 +50,24 @@ nav a{
   align-items: center;
   text-align: center;
   color: #6070ff;
-  padding: 8px;
+  padding: 23px;
   text-decoration: none;
 }
 .content{
   background-image: url('./images/Headweb.png');
   background-repeat: no-repeat;
-  background-size: 97% 100%;
+  background-size: 100% 100%;
 }
 .content h1{
   position: relative;
   left: 12rem;
+  width: 33%;
   font-style: bolder;
   font-weight: bolder;
   font-size: 40px;
   line-height: 60px;
   color: #172b4d;
-
+  
 }
 .content .para_text{
   position: relative;
@@ -74,7 +79,7 @@ nav a{
   font-size: 16px;
   line-height: 24px;
   color: #344563;
-
+  
 }
 .extra a{
   position: relative;
@@ -86,19 +91,21 @@ nav a{
   line-height: 24px;
   color: #7f8cff;
   text-decoration: none;
-
+  
 }
 .content ul {
   position: relative;
-  left: 10rem;
+  left: 9rem;
   list-style: none;
   display: flex;
-  gap: 23px;
+  gap:0px;
+  width: 20px ;
 }
 .content_set{
   padding: 200px 10px 144px 20px;
 
 }
+/* 
 
 .card{
   display: flex;
@@ -108,15 +115,16 @@ nav a{
   border-radius: 16px;
   text-align: left;
   justify-content: start;
-
+  width: 100%;
+  
 }
 .snap {
   display: none;
 }
 .websnap{
-display: flex;
+display: flex; */
 /* width: 544px; */
-height: 448px;
+/* height: 448px;
 padding: 12px 12px 12px 12px ;
 }
 .main {
@@ -193,13 +201,13 @@ li {
   font-size: 12px;
   line-height: 16px;
 }
-ul {
+/* ul {
   padding-left: 5px;
   width: 50%;
   display: grid;
   grid-column: 1;
   list-style: none;
-}
+} */
 .webcard{
  display: flex;
  flex-direction: row-reverse;
@@ -225,14 +233,14 @@ ul {
   background-color: #ffffff;
   display: flex;
   margin: 130px 0px 0px 0px;
-  padding: 12px 0px 47px 15px;
+  padding: 108px;
   font-family: "Poppins", sans-serif;
 }
 .about_side{
-  width: 50%;
+  width: 40%;
 }
 .about_right{
-  width: 50%;
+  width: 60%;
 }
 .about_h {
   color: #172b4d;
@@ -262,7 +270,6 @@ ul,
 }
 .ski {
   list-style-position: inside;
-  /* width: 50%; */
   width: 122px;
 height: 120px;
   flex: none;
@@ -383,8 +390,11 @@ hr {
   border: 1px solid #cfd8dc;
   box-shadow: 5px 5px #8490a7;
 }
+.contact button:active{
 
-}
+} 
+
+
 
 
 
